--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0",
     "md5": "^2.3.0",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9"
   }
 }
